src/test/ui/underscore-lifetime/where-clauses.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/where-clauses.rs:3:10
   |
LL | impl<'b: '_> Foo<'b> for i32 {}
   |          ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/where-clauses.rs:5:9
   |
LL | impl<T: '_> Foo<'static> for Vec<T> {}
   |         ^^ `'_` is a reserved lifetime name

warning: lifetime parameter `'a` never used
  --> $DIR/where-clauses.rs:1:11
   |
LL | trait Foo<'a> {}
   |          -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error: aborting due to 2 previous errors

